--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2790,9 +2790,18 @@ header h1,
     .cheatsheet-section-content pre {
         font-size: 0.8rem;
     }
-=======
+}
+
+/* Progress Overlay */
+.progress-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: rgba(0, 0, 0, 0.7);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1000;
